--- a/ICUAdmissions-2.Rmd
+++ b/ICUAdmissions-2.Rmd
@@ -15,7 +15,6 @@ chunk_output_type: inline
 runtime: shiny
 ---
 
-
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo =FALSE, message=FALSE, warning=FALSE, error=FALSE)
 library(Rcmdr)
@@ -344,16 +343,16 @@ selectInput("choice3", label="Choose an attribute:",
             selected = "HeartRate")
 
 choice3 <- reactive({
-  a<-a<-Subset(columns=input$choice3, data=icu )
+  a<-input$choice3
   return(a)
 })
-
+```
+```{r echo=FALSE}
  
 renderPlot({
   mydataframe<-data.frame(choice3())
  ggplot(mydataframe, aes(x=mydataframe[,1]))+
-  geom_density(color="darkblue", fill="lightblue")+
-  labs(x=input$choice3)
+  geom_density(color="darkblue", fill="lightblue")
 })
 ```
 The graph above shows that heart rates of participants in this study is not normally distributed and skewed towards the 75. However, considering that the average normal resting heart rate of individuals is between 60 and 100 beats per minute, this can be justified and this indicates that a majority of the sample had normal resting heart rates. 
@@ -419,7 +418,7 @@ From the graphs above the following conclusions can be made:
 require(ggplot2)
 
     selectInput("choice5", label="Choose an attribute:",
-              choices = c("Status","Sex","Race","Service","Cancer","Renal","Infection","CPR","Type","Fracture","PO2","PH","Cancer","Creatinine", "Consciousness","PCO2"),
+              choices = c("Status","Sex","Race","Service","Cancer","Renal","Infection","CPR","Type","Fracture","PO2","PH","Cancer","Creatinine", "Consciousness","PC02"),
             selected = "Status")
     
      choice5 <- reactive({
@@ -919,72 +918,72 @@ Ho: Lambda = 0, i.e., sex does not help to predict status, α= 0.05
 
 Ha: Lambda ≠ 0, i.e., sex does help to status 
 
------------------------------------------------------------------
+
 Ho: Lambda = 0, i.e., service does not help to predict status, α= 0.05
 
 Ha: Lambda ≠ 0, i.e., service does help to status 
 
------------------------------------------------------------------
+
 
 Ho: Lambda = 0, i.e., cancer does not help to predict status, α= 0.05
 
 Ha: Lambda ≠ 0, i.e., cancer does help to status 
 
------------------------------------------------------------------
+
 
 Ho: Lambda = 0, i.e., renal does not help to predict status, α= 0.05
 
 Ha: Lambda ≠ 0, i.e., renal does help to status 
 
------------------------------------------------------------------
+
 
 Ho: Lambda = 0, i.e., CPR does not help to predict status, α= 0.05
 
 Ha: Lambda ≠ 0, i.e., CPR does help to status 
 
------------------------------------------------------------------
+
 
 Ho: Lambda = 0, i.e., previous does not help to predict status, α= 0.05
 
 Ha: Lambda ≠ 0, i.e., previous does help to status 
 
------------------------------------------------------------------
+
 
 Ho: Lambda = 0, i.e., fracture does not help to predict status, α= 0.05
 
 Ha: Lambda ≠ 0, i.e., fracture does help to status 
 
------------------------------------------------------------------
+
 
 Ho: Lambda = 0, i.e., PO2 does not help to predict status, α= 0.05
 
 Ha: Lambda ≠ 0, i.e., PO2 does help to status 
 
------------------------------------------------------------------
+
 
 Ho: Lambda = 0, i.e., PH does not help to predict status, α= 0.05
 
 Ha: Lambda ≠ 0, i.e., PH does help to status 
------------------------------------------------------------------
+
 
 
 Ho: Lambda = 0, i.e., PC02 does not help to predict status, α= 0.05
 
 Ha: Lambda ≠ 0, i.e., PC02 does help to status 
 
------------------------------------------------------------------
+
 
 Ho: Lambda = 0, i.e., Bicarbonate does not help to predict status, α= 0.05
 
 Ha: Lambda ≠ 0, i.e., Bicarbonate does help to status 
 
------------------------------------------------------------------
+
 
 Ho: Lambda = 0, i.e., Creatinine does not help to predict status, α= 0.05
 
 Ha: Lambda ≠ 0, i.e., Creatinine does help to status 
 
------------------------------------------------------------------
+
 
 Ho: Lambda = 0, i.e., Conciousness does not help to predict status, α= 0.05
 
@@ -1223,7 +1222,7 @@ Therefore, we cannot confidently state that the variables of consciousness, age,
 # Limitations 
 Our sample size for this study of n=200, originated from a total sample of n=2734. The small size of our sample led to several issues.  A small sample size leads to lower statistical power when performing analysis on the data. A low statistical power can also reduce the likelihood of achieving results that have a true effect on the population. In terms of logistic regression, our BIC analysis works best when the number of participants (n) is much larger than the number of variables studied (k). In our analysis, the number of participants (n=200) is approximately 10 times larger than the number of variables (k=19). Ideally, n would be a larger value to trust our BIC regression analysis. Finally, a great deal of time and effort went into the analysis of this data, which is inefficient in terms of time as the results are less reliable.
 Lemeshow et al. (1988) advocated not to use the model to predict survival rated beyond the time of admission to the ICU, or to predict the length of a patient’s stay in the ICU. In addition, Lemeshow et al. (1988) stated this model only has potential predictive power on general admission to the ICU, and cannot be used in specialized units. 
-Further limitations include removal of the following patient populations from the data set: coronary care, cardiac surgery, burn patients, and patients under 14. The removal of this patient population limits the generalizability of the data set. In addition, there is a subjective and biased nature to data collected by nurses which may lead to errors in diagnostics. The data used in our analysis study have a high error rate which makes them unacceptable for clinical decision making in relation to individual patients survival rates upon admission to the ICU. Finally, higher than expected death rates may be due to unforeseen catastrophic events which occured in the ICU late in admission, and were not detected during early ICU admission.
+Further limitations include removal of the following patients populations from the data set: coronary care, cardiac surgery, burn patients, and patients under 14. The removal of this patient population limits the generalizability of the data set. In addition, there is a subjective and biased nature to data collected by nurses which may lead to errors in diagnostics. The data used in our analysis study have a high error rate which makes them unacceptable for clinical decision making in relation to individual patients survival rates upon admission to the ICU. Finally, higher than expected death rates may be due to unforeseen catastrophic events which occured in the ICU late in admission, and were not detected during early ICU admission.
 
 
 
